--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -114,7 +114,7 @@
     <string name="RestTres_texto_4"><a href="https://www.facebook.com/pages/Restaurante-La-Fogata-Guatape/394754463912742">Link</a></string>
 
     <!-- Que hacer? numero uno  -->
-    <string name="QhUno">Parque Comfama \n La Serpiente</string>
+    <string name="QhUno">Parque Comfama \n La Culebra</string>
     <string name="QhUno_texto_1">Imagínate en la mitad de un bosque y al fondo una imponente represa. Respira profundo,
         cierra tus ojos y deja que tus sentidos se activen. Para que esta experiencia sea real, visita el Parque Comfama Guatapé,
         acepta el reto en Aguaventura, haz un recorrido ecológico y luego comparte con tu familia de un rico picnic.\n</string>
