--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -160,5 +160,9 @@
     <string name="pmain">Pagina Principal</string>
     <string name="list">Lista General</string>
     <string name="about">About</string>
+    <string name="title_activity_qh_d">QhActivityD</string>
+    <string name="title_activity_main_d">MainActivityD</string>
+    <string name="title_activity_perfil_d">PerfilActivityD</string>
+    <string name="title_activity_list_d">ListActivityD</string>
 
 </resources>
