--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -165,5 +165,6 @@
     <string name="title_activity_perfil_d">PerfilActivityD</string>
     <string name="title_activity_list_d">ListActivityD</string>
     <string name="title_activity_maps">Map</string>
+    <string name="mapa">Ver ubicacion en Mapa</string>
 
 </resources>
